--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,55 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: "Open Sans", sans-serif;
+  margin: 0;
+  padding: 1rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
+.wrapper {
+  max-width: 600px;
+  margin: 0 auto;
 }
 
-.App-header {
-  min-height: 100vh;
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+li+li {
+  margin-top: 1rem;
+}
+
+li {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: flex-start;
+  gap: 1rem;
+  background: #f7f5f0;
+  padding: 1.5rem;
+  border-radius: 1rem;
+  width: calc(100% - 2rem);
+  box-shadow: 0.25rem 0.25rem 0.75rem rgb(0 0 0 / 0.1);
 }
 
-.App-link {
-  color: rgb(112, 76, 182);
+li:nth-child(even) {
+  flex-direction: row-reverse;
+  background: honeydew;
+  margin-right: -2rem;
+  margin-left: 2rem;
 }
 
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
+li:nth-child(even)::before {
+  transform: rotateY(180deg);
+}
+
+a {
+  font-size: xx-large;
+  padding: 1rem;
+  text-decoration: none;
+}
+
+.page-count {
+  flex-direction: row-reverse;
 }
