--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,49 @@
+@import url("https://fonts.googleapis.com/css?family=Didact+.didact-gothic-regular");
 * {
-  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; 
+}
+
+header {
+  background-color: #474a42;
+  padding: 2rem;
+  margin: 0rem 0rem 1rem 0rem;
+  box-shadow: 0.25rem 0.25rem 0.75rem rgb(0 0 0 / 0.15);
+}
+
+footer {
+  background-color: #474a42;
+  padding: 2rem;
+  margin-top: auto;
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Didact Gothic", sans-serif;
   margin: 0;
-  padding: 1rem;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.title {
+  padding-top: 4rem;
+}
+
+img{
+  box-shadow: 0.25rem 0.25rem 0.75rem rgb(0 0 0 / 0.15);
+  margin: 1rem;
+}
+
+.banner {
+  padding: 2rem 0rem 2rem 0rem;
+  .h1 {
+    font-size: 2rem;
+    padding: 2rem 0rem 0rem 0rem;
+  }
+  .author {
+    font-size: 5rem;
+  }
 }
 
 .wrapper {
@@ -13,43 +51,155 @@ body {
   margin: 0 auto;
 }
 
-ul {
-  list-style: none;
-  padding: 0;
-}
-
-li+li {
+/* li+li {
   margin-top: 1rem;
-}
+} */
 
 li {
   display: flex;
   align-items: flex-start;
   gap: 1rem;
-  background: #f7f5f0;
-  padding: 1.5rem;
+  background: #f0f0e6;
   border-radius: 1rem;
-  width: calc(100% - 2rem);
   box-shadow: 0.25rem 0.25rem 0.75rem rgb(0 0 0 / 0.1);
-}
-
-li:nth-child(even) {
-  flex-direction: row-reverse;
-  background: honeydew;
-  margin-right: -2rem;
-  margin-left: 2rem;
-}
-
-li:nth-child(even)::before {
-  transform: rotateY(180deg);
+  margin-bottom: 2rem;
+  vertical-align: top;
+  flex-direction: row;
 }
 
 a {
   font-size: xx-large;
-  padding: 1rem;
   text-decoration: none;
+  color: black;
+  padding: 1.5rem 1rem 0rem 0rem;
 }
 
-.page-count {
-  flex-direction: row-reverse;
+a:hover{
+  color: #474a42;
+}
+
+h1 {
+  font-family: "Didact Gothic", sans-serif;
+  text-align: center;
+  font-size: xx-large;
+}
+
+h2 {
+  text-shadow: 1px 0px 0px black;
+  font-style: italics;
+}
+
+h3 {
+  font-family: "Didact Gothic", sans-serif;
+  text-align: center;
+}
+
+.app {
+  font-family: "Didact Gothic", sans-serif;
+  padding: 0rem 10rem 4rem 10rem;
+}
+
+.didact-gothic-regular {
+  font-family: "Didact Gothic", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.detail {
+    padding: 5rem 10rem 0rem 10rem;
+}
+
+head {
+  padding-top: 0;
+}
+
+ul{
+  list-style: none;
+}
+h1 {
+    text-align: center;
+    font-size: xx-large;
+  }
+
+.desc {
+  flex-direction: row;
+  display: flex;
+  align-items: flex-start;
+  background: #f7f5f0;
+  border-radius: 1rem;
+  box-shadow: 0.25rem 0.25rem 0.75rem rgb(0 0 0 / 0.1);
+}
+
+.detail {
+    padding: 1rem 1rem 0rem 1rem;
+  }
+
+p {
+  font-size: large;
+}
+
+ /* for small screens */
+@media only screen and (max-width: 768px) {
+  .app {
+      padding: 1rem;
+    }
+  a {
+      /* padding: 1rem; */
+      font-size: x-large;
+  }
+  .desc {
+    gap: 1rem;
+    border-radius: 1rem;
+    box-shadow: 0.25rem 0.25rem 0.75rem rgb(0 0 0 / 0.1);
+    padding: 2rem;
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+  }
+  .detail {
+    padding: 0rem;
+  }
+
+  .image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+  }
+
+  p {
+    padding-top: 1rem;
+    font-size: medium;
+  }
+
+}
+
+ /* for large screens */
+@media only screen and (min-width: 992px) {
+  .desc {
+    gap: 1rem;
+    border-radius: 1rem;
+    box-shadow: 0.25rem 0.25rem 0.75rem rgb(0 0 0 / 0.1);
+    background: #f0f0e6;
+    margin: 2rem 20rem 20rem 20rem;
+    vertical-align: top;
+    padding: 2rem;
+  }
+
+  .detail {
+      padding: 0rem;
+  }
+
+  li {
+    margin: 0rem 1rem 1rem 1rem;
+  }
+
+  ul {
+    padding: 0;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+  }
 }
